internal/wireguard/testdata/firewalld-f44-policies-forwarding.txt
allow-host-ipv6 (active)
  disable: no
  priority: -15000
  target: CONTINUE
  ingress-zones: ANY
  egress-zones: HOST
  services: 
  ports: 
  protocols: 
  masquerade: no
  forward-ports: 
  source-ports: 
  icmp-blocks: 
  rich rules: 
	rule family="ipv6" icmp-type name="mld-listener-done" accept
	rule family="ipv6" icmp-type name="mld-listener-query" accept
	rule family="ipv6" icmp-type name="mld-listener-report" accept
	rule family="ipv6" icmp-type name="mld2-listener-report" accept
	rule family="ipv6" icmp-type name="neighbour-advertisement" accept
	rule family="ipv6" icmp-type name="neighbour-solicitation" accept
	rule family="ipv6" icmp-type name="redirect" accept
	rule family="ipv6" icmp-type name="router-advertisement" accept

gateway-dmz-to-HOST (disabled)
  disable: yes
  priority: 1000
  target: CONTINUE
  ingress-zones: dmz
  egress-zones: HOST
  services: dhcp dns
  ports: 
  protocols: 
  masquerade: no
  forward-ports: 
  source-ports: 
  icmp-blocks: 
  rich rules: 

gateway-lan-to-HOST (disabled)
  disable: yes
  priority: 1000
  target: CONTINUE
  ingress-zones: internal home trusted
  egress-zones: HOST
  services: dhcp dns ssh
  ports: 
  protocols: 
  masquerade: no
  forward-ports: 
  source-ports: 
  icmp-blocks: 
  rich rules: 

gateway-lan-to-work (disabled)
  disable: yes
  priority: 1000
  target: ACCEPT
  ingress-zones: internal home trusted
  egress-zones: work
  services: ftp tftp
  ports: 
  protocols: 
  masquerade: no
  forward-ports: 
  source-ports: 
  icmp-blocks: 
  rich rules: 

gateway-lan-to-world (disabled)
  disable: yes
  priority: 1000
  target: ACCEPT
  ingress-zones: internal home trusted
  egress-zones: external public
  services: ftp tftp
  ports: 
  protocols: 
  masquerade: no
  forward-ports: 
  source-ports: 
  icmp-blocks: 
  rich rules: 

gateway-world-to-HOST (disabled)
  disable: yes
  priority: 1000
  target: CONTINUE
  ingress-zones: external public
  egress-zones: HOST
  services: dhcpv6-client
  ports: 
  protocols: 
  masquerade: no
  forward-ports: 
  source-ports: 
  icmp-blocks: 
  rich rules: 

wg0-fwd (active)
  disable: no
  priority: -1
  target: CONTINUE
  ingress-zones: ANY
  egress-zones: public
  services: 
  ports: 
  protocols: 
  masquerade: no
  forward-ports: 
  source-ports: 
  icmp-blocks: 
  rich rules: 
	rule family="ipv4" source address="198.51.100.0/24" destination address="203.0.113.0/24" accept
	rule family="ipv4" source address="198.51.100.0/24" destination address="203.0.113.0/24" masquerade
