internal/wireguard/testdata/firewalld-policies-default.txt
allow-host-ipv6 (active)
  priority: -15000
  target: CONTINUE
  ingress-zones: ANY
  egress-zones: HOST
  services: 
  ports: 
  protocols: 
  masquerade: no
  forward-ports: 
  source-ports: 
  icmp-blocks: 
  rich rules: 
	rule family="ipv6" icmp-type name="mld-listener-done" accept
	rule family="ipv6" icmp-type name="mld-listener-query" accept
	rule family="ipv6" icmp-type name="mld-listener-report" accept
	rule family="ipv6" icmp-type name="mld2-listener-report" accept
	rule family="ipv6" icmp-type name="neighbour-advertisement" accept
	rule family="ipv6" icmp-type name="neighbour-solicitation" accept
	rule family="ipv6" icmp-type name="redirect" accept
	rule family="ipv6" icmp-type name="router-advertisement" accept
