internal/wireguard/testdata/ip-route.json
[{"dst":"default","gateway":"198.51.100.1","dev":"ens3","protocol":"dhcp","prefsrc":"198.51.100.150","metric":100,"flags":[]},{"dst":"198.51.100.0/24","dev":"ens3","protocol":"kernel","scope":"link","prefsrc":"198.51.100.150","metric":100,"flags":[]},{"dst":"198.51.100.1","dev":"ens3","protocol":"dhcp","scope":"link","prefsrc":"198.51.100.150","metric":100,"flags":[]},{"dst":"192.0.2.0/24","dev":"wg0","protocol":"kernel","scope":"link","prefsrc":"192.0.2.1","flags":[]},{"dst":"169.254.0.0/16","d [...]
