internal/wireguard/testdata/iptables-ufw.txt
-P INPUT DROP
-P FORWARD DROP
-P OUTPUT ACCEPT
-N ufw-before-input
-N ufw-user-input
-N ufw-after-input
-N ufw-user-limit
-N ufw-user-limit-accept
-A INPUT -j ufw-before-input
-A INPUT -j ufw-after-input
-A ufw-before-input -i lo -j ACCEPT
-A ufw-before-input -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-input -m conntrack --ctstate INVALID -j DROP
-A ufw-before-input -p udp -m udp --sport 67 --dport 68 -j ACCEPT
-A ufw-before-input -j ufw-user-input
-A ufw-user-input -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -m recent --set --name DEFAULT --mask 255.255.255.255 --rsource
-A ufw-user-input -p tcp -m tcp --dport 22 -j ufw-user-limit
-A ufw-user-input -p udp -m udp --dport 51820 -j ACCEPT
-A ufw-user-input -p udp -m multiport --dports 60000:61000,41641 -j ACCEPT
-A ufw-user-input -s 192.0.2.10/32 -p udp -m udp --dport 5353 -j ACCEPT
-A ufw-user-limit -j REJECT --reject-with icmp-port-unreachable
-A ufw-after-input -p udp -m udp --dport 137 -j RETURN
